# sagemaker_workflow_blueprint

titanic/: pyproject.toml
titanic/scripts/: run.py  run_orig.py
titanic/titanic/: data_steps.py
